<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/course"
        android:title="@string/course_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_subtitles_24" />
    <item
        android:id="@+id/chat"
        android:title="@string/chat_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_chat_24" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_person_24" />
</menu>